# openapi3.yaml
@@ -194,109 +194,6 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/layer'
-  /mosaic/{name}:
-    post:
-      deprecated: true
-      operationId: addLayerToMosaic
-      tags:
-        - Mosaic
-      summary: add layer to mosaic
-      parameters:
-        - name: name
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '201':
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/mosaicLayer'
-        '400':
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/error'
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/error'
-              examples:
-                LayerNotFound:
-                  value:
-                    message: Layer name {layerName} is not exists
-                MosaicNotFound:
-                  value:
-                    message: Mosaic name {mosaicName} is not exists
-        '500':
-          description: Ineternal Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/error'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/mosaicLayer'
-    put:
-      deprecated: true
-      operationId: updateMosaic
-      tags:
-        - Mosaic
-      summary: update mosaic layers
-      parameters:
-        - name: name
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '201':
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/mosaic'
-        '204':
-          description: Updated
-        '400':
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/error'
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/error'
-              examples:
-                LayerNotFound:
-                  value:
-                    message: Layer name {layerName} is not exists
-                MosaicNotFound:
-                  value:
-                    message: Mosaic name {mosaicName} is not exists
-        '500':
-          description: Ineternal Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/error'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/mosaic'
 components:
   schemas:
     error:
