# src/layers/models/layersManager.ts
@@ -21,6 +21,7 @@ import { GpkgSource } from '../../common/cacheProviders/gpkgSource';
 import { FSSource } from '../../common/cacheProviders/fsSource';
 import { SourceTypes } from '../../common/enums';
 import { RedisSource } from '../../common/cacheProviders/redisSource';
+import { getRedisCacheName, isRedisCacheLayer } from '../../common/utils';
 
 @injectable()
 class LayersManager {
@@ -50,59 +51,13 @@ class LayersManager {
     await this.configProvider.updateJson(editJson);
   }
 
-  // public async addLayerToMosaic(mosaicName: string, layerToMosaicRequest: ILayerToMosaicRequest): Promise<void> {
-  //   this.logger.info(`Add layer: ${layerToMosaicRequest.layerName} to mosaic: ${mosaicName} request`);
-
-  //   const editJson = (jsonDocument: IMapProxyJsonDocument): IMapProxyJsonDocument => {
-  //     if (!isLayerNameExists(jsonDocument, layerToMosaicRequest.layerName)) {
-  //       throw new NotFoundError(`Layer name '${layerToMosaicRequest.layerName}' is not exists`);
-  //     }
-
-  //     if (!isLayerNameExists(jsonDocument, mosaicName)) {
-  //       throw new NotFoundError(`Mosaic name '${mosaicName}' is not exists`);
-  //     }
-  //     // eslint-disable-next-line @typescript-eslint/no-unsafe-assignment
-  //     const mosaicCache: IMapProxyCache = jsonDocument.caches[mosaicName];
-  //     mosaicCache.sources.push(layerToMosaicRequest.layerName);
-  //     return jsonDocument;
-  //   };
-
-  //   await this.configProvider.updateJson(editJson);
-  //   this.logger.info(`Successfully added layer: '${layerToMosaicRequest.layerName}' to mosaic: '${mosaicName}'`);
-  // }
-
-  // public async updateMosaic(mosaicName: string, updateMosaicRequest: IUpdateMosaicRequest): Promise<void> {
-  //   this.logger.info(`Update mosaic: ${mosaicName} request`);
-
-  //   const editJson = (jsonDocument: IMapProxyJsonDocument): IMapProxyJsonDocument => {
-  //     if (!isLayerNameExists(jsonDocument, mosaicName)) {
-  //       throw new NotFoundError(`Mosaic name '${mosaicName}' is not exists`);
-  //     }
-  //     updateMosaicRequest.layers.forEach((layer) => {
-  //       if (!isLayerNameExists(jsonDocument, layer.layerName)) {
-  //         throw new NotFoundError(`Layer name '${layer.layerName}' is not exists`);
-  //       }
-  //     });
-
-  //     const sortedLayers: string[] = sortArrayByZIndex(updateMosaicRequest.layers);
-
-  //     // eslint-disable-next-line @typescript-eslint/no-unsafe-assignment
-  //     const mosaicCache: IMapProxyCache = jsonDocument.caches[mosaicName];
-  //     mosaicCache.sources = sortedLayers;
-  //     return jsonDocument;
-  //   };
-
-  //   await this.configProvider.updateJson(editJson);
-  //   this.logger.info(`Successfully updated mosaic: '${mosaicName}'`);
-  // }
-
-  public getAllLinkedCaches(baseCacheNames: string[], mapproxyConfiguration: IMapProxyJsonDocument): string[] {
+  public getAllLayerLinkedCaches(baseCacheNames: string[], mapproxyConfiguration: IMapProxyJsonDocument): string[] {
     const linkedCaches: string[] = [];
     const baseCacheNamesDuplicate: string[] = [...baseCacheNames];
 
     baseCacheNamesDuplicate.forEach((currentCache) => {
       const mainCacheName = currentCache.endsWith('-redis') ? currentCache.replace('-redis', '') : currentCache;
-      const redisCacheName = `${mainCacheName}-redis`;
+      const redisCacheName = getRedisCacheName(mainCacheName);
 
       if (mapproxyConfiguration.caches[mainCacheName] != undefined) {
         if (!linkedCaches.includes(mainCacheName)) {
@@ -125,21 +80,28 @@ class LayersManager {
     let failedLayers;
     const deletedLayers: string[] = [];
 
+    layersName.forEach(layerName => {
+      if (isRedisCacheLayer(layerName)){
+        const errorMsg = `layer names that ends with '-redis' are not supported`
+        throw Error(errorMsg)
+      }
+    });
+
     const editJson = (jsonDocument: IMapProxyJsonDocument): IMapProxyJsonDocument => {
       let updateCounter = 0;
-      const allLinkedCaches = this.getAllLinkedCaches(layersName, jsonDocument);
+      const allLinkedCaches = this.getAllLayerLinkedCaches(layersName, jsonDocument);
       allLinkedCaches.forEach((cacheName) => {
         // remove requested layer cache source from cache list
         delete jsonDocument.caches[cacheName];
         this.logger.info(`Successfully removed cache '${cacheName}'`);
-        deletedLayers.push(cacheName);
-        updateCounter++;
         // remove requested layer from layers array
         const requestedLayerIndex: number = jsonDocument.layers.findIndex((layer) => layer.name === cacheName);
         // eslint-disable-next-line @typescript-eslint/no-magic-numbers
         if (requestedLayerIndex !== -1) {
           jsonDocument.layers.splice(requestedLayerIndex, 1);
           this.logger.info(`Successfully removed layer '${cacheName}'`);
+          deletedLayers.push(cacheName);
+          updateCounter++;
         }
       });
       failedLayers = layersName.filter((layerName) => !allLinkedCaches.includes(layerName));
@@ -167,39 +129,43 @@ class LayersManager {
   public async updateLayer(layerName: string, layerRequest: ILayerPostRequest): Promise<void> {
     this.logger.info({ msg: `Update layer: '${layerName}' request`, layerRequest });
     const tileMimeFormat = mimeLookup(layerRequest.format) as TilesMimeFormat;
-    const isRedisCache = layerName.endsWith('-redis');
+    const isRedisCache = isRedisCacheLayer(layerName);
     let doesHaveRedisCache = false;
+    
+    if (isRedisCacheLayer(layerName)){
+      const errorMsg = `layer names that ends with '-redis' are not supported`
+      throw Error(errorMsg)
+    }
 
     const editJson = (jsonDocument: IMapProxyJsonDocument): IMapProxyJsonDocument => {
       let newLayer: IMapProxyLayer;
-      let redisLayerName: string = layerName;
-      let mainLayerName = layerName.replace('-redis', '');
+      const redisLayerName = getRedisCacheName(layerName);
+      const mainLayerName = layerName;
+      doesHaveRedisCache = jsonDocument.caches[redisLayerName] != undefined;
 
       if (jsonDocument.caches[layerName] == undefined) {
         throw new NotFoundError(`Cache name '${layerName}' does not exists`);
       }
 
-      if (!isRedisCache) {
-        mainLayerName = layerName;
-        redisLayerName = `${layerName}-redis`;
-        doesHaveRedisCache = jsonDocument.caches[redisLayerName] != undefined;
-      }
-
       if (isRedisCache || doesHaveRedisCache) {
         // update existing layer cache values with the new requested layer cache values
         const newRedisCache: IMapProxyCache = this.createRedisCache(redisLayerName, mainLayerName, tileMimeFormat, this.mapproxyConfig);
+        this.logger.info({ msg: `updating cache ${redisLayerName}`, newRedisCache });
         jsonDocument.caches[redisLayerName] = newRedisCache;
         // update existing layer values with the new requested layer values
         newLayer = this.getLayerValues(redisLayerName);
         const redisLayerIndex: number = jsonDocument.layers.findIndex((layer) => layer.name === redisLayerName);
+        this.logger.info({ msg: `updating layer ${redisLayerName}`, newLayer });
         jsonDocument.layers[redisLayerIndex] = newLayer;
       } else {
         newLayer = this.getLayerValues(mainLayerName);
         const sourceLayerNameIndex: number = jsonDocument.layers.findIndex((layer) => layer.name === mainLayerName);
+        this.logger.info({ msg: `updating layer ${mainLayerName}`, newLayer });
         jsonDocument.layers[sourceLayerNameIndex] = newLayer;
       }
-      const newSourceCache: IMapProxyCache = this.getCacheValues(layerRequest.cacheType, layerRequest.tilesPath, tileMimeFormat);
-      jsonDocument.caches[mainLayerName] = newSourceCache;
+      const mainSourceCache: IMapProxyCache = this.getCacheValues(layerRequest.cacheType, layerRequest.tilesPath, tileMimeFormat);
+      this.logger.info({ msg: `updating cache ${mainLayerName}`, newSourceCache: mainSourceCache });
+      jsonDocument.caches[mainLayerName] = mainSourceCache;
 
       return jsonDocument;
     };
