# src/layers/routes/layersRouterFactory.ts
@@ -10,9 +10,6 @@ const layersRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
   router.post('/layer', controller.addLayer);
   router.put('/layer/:name', controller.updateLayer);
   router.delete('/layer', controller.removeLayer);
-  // router.post('/mosaic/:name', controller.addLayerToMosaic);
-  // router.put('/mosaic/:name', controller.updateMosaic);
-
   return router;
 };
 export const LAYERS_ROUTER_SYMBOL = Symbol('layersRouterFactory');
